--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -118,3 +118,20 @@
     font-size: larger;
     color: white;
 }
+
+.activity {
+  justify-content: flex-end;
+  align-items: center;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 20px;
+  left: 49%;
+  transform: translateX(-50%);
+  background-color: gray;
+  height: 380px;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+}
