--- a/src/Slide/log.css
+++ b/src/Slide/log.css
@@ -15,4 +15,17 @@
     padding-bottom: 8px;
     text-align: center;
     flex: 1;
+    width: 150px;
+}
+.row2{
+    display: flex;
+    width: 600px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+}
+.row2 p{
+    width: 150px;
+    text-align: center;
+    color: antiquewhite;
 }
