--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -138,6 +138,11 @@
 
 .activ {
   display: flex;
-  width: 650px;
+  width: 600px;
   padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: black;
+  height: auto;
+  border-radius: 5px;
 }
