--- a/src/Slide/log.css
+++ b/src/Slide/log.css
@@ -25,6 +25,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 .row2 p{
     width: 150px;
