--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -142,7 +142,7 @@
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: black;
+  background-color: gray;
   height: auto;
   border-radius: 5px;
 }
