--- a/src/Slide/log.css
+++ b/src/Slide/log.css
@@ -8,9 +8,14 @@
 }
 .row1{
     display: flex;
+    background-color: rgb(46, 35, 35);
+    border-radius: 5px;
     width: 600px;
     align-items: center;
     justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 50;
 }
 .row1 p{
     font-size: large;
@@ -18,6 +23,8 @@
     padding-bottom: 8px;
     text-align: left;
     width: 200px;
+    padding-left: 10px;
+    padding-top: 3px;
 }
 .row2{
     display: flex;
