--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -135,6 +135,11 @@
   justify-content: center;
   align-items: center;
 }
+.activity span{
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+}
 
 .activ {
   display: flex;
