--- a/src/profile/Pros.css
+++ b/src/profile/Pros.css
@@ -1,6 +1,8 @@
 .profile-button {
   position: relative;
   display: inline-block;
+  justify-content: center;
+  align-items: center;
 }
 
 .profile-icon {
