--- a/src/profile/Pros.css
+++ b/src/profile/Pros.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   justify-content: end;
-  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .profile-icon {
