--- a/src/profile/Pros.css
+++ b/src/profile/Pros.css
@@ -1,10 +1,15 @@
+.main{
+  justify-content: end;
+  display: flex;
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
 .profile-button {
   position: relative;
   align-items: center;
   display: inline-flex;
   justify-content: end;
-  padding-right: 20px;
-  padding-top: 20px;
 }
 
 .profile-icon {
