--- a/src/profile/Pros.css
+++ b/src/profile/Pros.css
@@ -1,7 +1,7 @@
 .main{
   justify-content: end;
   display: flex;
-  padding-right: 20px;
+  padding-right: 40px;
   padding-top: 20px;
 }
 
@@ -27,8 +27,9 @@
   position: absolute;
   top: 60px;
   left: -50px;
-  width: 200px;
+  width: 150px;
   padding: 10px;
+  padding-left: 15%;
   background-color: #f1f1f1;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
