--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -12,4 +12,11 @@
 }
 .image img{
     width: 50px;
+    align-items: center;
+}
+.image h1{
+    font-size: 16px;
+}
+.image p{
+    font-size: 16px;
 }
