--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -2,17 +2,20 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 300px;
-    height: 300px;
+    width: 600px;
+    height: 400px;
 }
 .image{
     width: 100%;
-    height: auto;
+    height: 100%;
     justify-content: center;
+    background-color: rgb(207, 201, 201);
+    border-radius: 10px;
 }
 .image img{
-    width: 50px;
+    width: 150px;
     align-items: center;
+    border-radius: 20px;
 }
 .image h1{
     font-size: 16px;
