--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -2,12 +2,13 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 600px;
+    width: 500px;
     height: 400px;
 }
 .image{
     width: 100%;
     height: 100%;
+    text-align: center;
     justify-content: center;
     background-color: rgb(207, 201, 201);
     border-radius: 10px;
@@ -15,7 +16,7 @@
 .image img{
     width: 150px;
     align-items: center;
-    border-radius: 20px;
+    border-radius: 50px;
 }
 .image h1{
     font-size: 16px;
