--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -3,20 +3,28 @@
     align-items: center;
     display: flex;
     width: 500px;
-    height: 400px;
+    height: 500px;
 }
-.image{
+.centered-content {
     width: 100%;
     height: 100%;
     text-align: center;
     justify-content: center;
-    background-color: rgb(207, 201, 201);
+    background-color: rgb(197, 188, 188);
     border-radius: 10px;
+  }
+.image{
+    padding-top: 10px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    border-radius: 50px;
+    background-color: black;
+    width: 20%;
 }
 .image img{
     width: 150px;
     align-items: center;
-    border-radius: 50px;
 }
 .image h1{
     font-size: 16px;
