--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -1,43 +1,27 @@
-.container {
+.container{
     justify-content: center;
     align-items: center;
     display: flex;
     width: 500px;
     height: 500px;
-  }
-  
-  .centered-content {
+}
+.image{
     width: 100%;
     height: 100%;
     text-align: center;
     justify-content: center;
-    background-color: rgb(197, 188, 188);
-    border-radius: 10px;
-  }
-  
-  .image {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    border-radius: 50%;
-    background-color: black;
+    background-color: rgb(207, 201, 201);
+}
+.image img{
     width: 150px;
-    height: 150px;
-    overflow: hidden; /* To ensure the image is contained within the circle */
-  }
-  
-  .image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* To maintain the aspect ratio and fill the circle */
-    border-radius: 50%; /* To make the image appear in a circle */
-  }
-  
-  .image h1 {
+    align-items: center;
+    padding-top: 30px;
+    border-radius: 50%;
+
+}
+.image h1{
     font-size: 16px;
-  }
-  
-  .image p {
+}
+.image p{
     font-size: 16px;
-  }
-  
+}
