--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -1,26 +1,33 @@
-.container{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: 500px;
-    height: 500px;
+.container {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 500px;
+  height: 500px;
 }
-.image{
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    justify-content: center;
-    background-color: rgb(207, 201, 201);
+.image {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  justify-content: center;
+  border-radius: 20px;
+  background-color: rgb(207, 201, 201);
 }
-.image img{
-    width: 40%;
+.image img {
+  width: 40%;
   height: 40%;
   object-fit: cover;
   border-radius: 50%;
+  padding-top: 20px;
 }
-.image h1{
-    font-size: 16px;
+.image h1 {
+  font-size: 16px;
 }
-.image p{
-    font-size: 16px;
+.image p {
+  font-size: 16px;
+}
+.name{
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
