--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -26,8 +26,20 @@
 .image p {
   font-size: 16px;
 }
-.name{
+.name {
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: left;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+.name p{
+    text-align: left;
+    padding-left: 25%;
+    width: 30%;
+}
+.name h1{
     width: 100%;
 }
