--- a/src/profile/profileData.css
+++ b/src/profile/profileData.css
@@ -3,7 +3,7 @@
   align-items: center;
   display: flex;
   width: 500px;
-  height: 500px;
+  height: 450px;
 }
 .image {
   width: 100%;
@@ -34,12 +34,15 @@
     text-align: left;
     padding-left: 40px;
     padding-right: 40px;
+    padding-top: 10px;
   }
 .name p{
     text-align: left;
-    padding-left: 25%;
+    padding-left: 10%;
     width: 30%;
+    margin: 2px;
 }
 .name h1{
     width: 100%;
+    margin: 2px;
 }
